# Op-Integrations

etl/extend/: etl.ipynb
taps/tap-colleqtive/: .gitignore  config.json.example  connector-config.json  pyproject.toml
taps/tap-colleqtive/tap_colleqtive/: __init__.py  streams.py  tap.py
taps/tap-colleqtive/tests/: test_tap.py
taps/tap-extend/: .gitignore  Extend Commerce.postman_collection.json  config.json.example  connector-config.json  pyproject.toml
taps/tap-extend/tap_extend/: streams.py  tap.py
taps/tap-extend/tests/: test_tap.py
taps/tap-fathom/: README.md  config.json.example  pyproject.toml
taps/tap-fathom/tap_fathom/: __main__.py  client.py  streams.py  tap.py
taps/tap-fathom/tests/: test_tap.py
taps/tap-hotglue/: pyproject.toml
taps/tap-hotglue/tap_hotglue/: __init__.py  client.py  streams.py  tap.py
