[tool.poetry]
name = "tap-hotglue"
version = "0.0.1"
description = "`tap-hotglue` is a Singer tap for the HotGlue platform API, built with the Meltano Singer SDK."
authors = ["Optiply Integrations"]
keywords = [
    "ELT",
    "HotGlue",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
requests = "^2.25.1"
singer-sdk = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-hotglue = 'tap_hotglue.tap:TapHotglue.cli'
tap-hotglue-api = 'tap_hotglue.tap:TapHotglue.cli'
